# test-repo

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: action.yml  comment_action.yaml  comment_commands.yml  on_merge.yaml  python_ci.yaml
lib/: setup.py
lib/module_name/: new_file.py
lib/module_name/scripts/: plot_styles.py
lib/module_name/tests/: test_new_file.py
lib/test_repo/: __version__.py  graphics.py  new_file.py  utilities.py  utils.py
lib/test_repo/module/: file.py
lib/test_repo/module/tests/: test_file.py
lib/test_repo/tests/: test_graphics.py  test_new_file.py  test_utils.py
