[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "test_repo"
version = "0.1.0"
description = "Description"
authors = [
    {name = "Loic Diridollou", email = "l.d@outlook.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "seaborn",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["lib"]
exclude = ["*tests*"]
namespaces = false # Disable implicit namespaces

[project.optional-dependencies]
lint = [
  "black",
  "isort",
  "mypy",
  "pandas-stubs",
  "ruff",
  "types-seaborn",
]

test = [
  "pytest",
  "pytest-cov",
]
dev = [
  "test_repo[lint,test]"
]

[project.scripts]
plttest = "test_repo.scripts.plot_styles:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E722",
    "B008",  # function call in defaults
    "I001",  # import order
    "PLC1901",  # truthy strings
]

select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "A",
    "PLC",
    "UP",
    "D",
]

pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"lib/**/__init__.py" = ["D"]

[tool.isort]
known_first_party = ["test_repo"]
profile = "black"
